# cpplog

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  basic.cpp
include/cpplog/: log.hpp  log_parser.hpp
src/: CMakeLists.txt  log.cpp  log_parser.cpp
tests/: CMakeLists.txt  error_log_test.cpp  parser_test.cpp  severity_test.cpp  sync_line_stream_test.cpp  sync_stream_test.cpp  test_lib.cpp
